add permissions for work with boards
